fix collapsing margin issues.

--- a/client/scss/general.scss
+++ b/client/scss/general.scss
@@ -95,6 +95,10 @@ p, ul, ol, li, td, input, button, label {
     box-shadow: 0 4px 6px 0 $shadow;
 }
 
+%box-shadow {
+    box-shadow: 0 4px 6px 0 $shadow;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -103,6 +107,7 @@ p, ul, ol, li, td, input, button, label {
 
 %container {
     background-color: white;
+    box-shadow: 0 4px 6px 0 hsla(0, 0, 50, 0.3);
     margin: $margin-large 0;
     padding: $padding-large;
 }
